--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -17,8 +17,8 @@
     <% end %>
   </tbody>
 </table>
-
-<%= f.submit %>
+<p><small>Please make sure that you've selected at least one user.</small></p>
+<%= f.submit class:"btn btn-success" %>
 <% end %>
 
 <script type="text/javascript">
