--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,11 +45,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">NuriApp</a>
+        <a class="navbar-brand" href="<%= root_path %>">NuriApp</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li><%= link_to "Create team", new_team_path  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
+            <li><%= link_to "All teams", teams_path  %></li>
             <li><%= link_to "Link3", "/path3"  %></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
