--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,5 +1,7 @@
 <h3>All teams</h3>
-
+<% if Team.any? %>
+  <%= button_to "Delete all teams", {controller: "teams", action:"delete_all"}, data:{disable_with: "Processing ..."}, class:"btn btn-danger" %>
+<% end %>
 <% @teams.each do |team| %>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
