--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "Create team", new_team_path  %></li>
             <li><%= link_to "All teams", teams_path  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <li><%= link_to "Delete Users", delete_users_path  %></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
