--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,11 +48,14 @@
         <a class="navbar-brand" href="<%= root_path %>">NLBC</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Create team", new_team_path  %></li>
-            <li><%= link_to "All teams", teams_path  %></li>
             <% if current_user %>
+              <li><%= link_to "Create team", new_team_path  %></li>
+              <li><%= link_to "All teams", teams_path  %></li>
               <% if current_user.role.name == 'admin' %>
+                <li><%= link_to "Feedbacks", feedbacks_path  %></li>
                 <li><%= link_to "Delete Users", delete_users_path  %></li>
+              <% else %>
+                <li><%= link_to "Leave feedback", new_feedback_path  %></li>
               <% end %>
             <% end %>
           </ul>
