full implementation of the frontend and updateing the existing pages

--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -1,14 +1,17 @@
-<h3>Select bootcamp</h3>
-<hr>
+<div class="container old-spacer">
+  <h3>Select bootcamp</h3>
+  <hr>
 
 
-<div class="btn-group">
-  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Choose bootcamp <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu">
-    <% @feedbacks.each do |feedback| %>
-      <li><%= link_to Bootcamp.find(feedback.bootcamp_id).title.titleize, feedback_path(feedback.bootcamp_id) %></li>
-    <% end %>
-  </ul>
+  <div class="btn-group">
+    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Choose bootcamp <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu">
+      <% @feedbacks.each do |feedback| %>
+        <li><%= link_to Bootcamp.find(feedback.bootcamp_id).title.titleize, feedback_path(feedback.bootcamp_id) %></li>
+      <% end %>
+    </ul>
+  </div>
+
 </div>
