--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,5 +1,8 @@
-<h3>Show team</h3>
+<div class="container old-spacer">
+  <h3>Show team</h3>
 
-<% @team.users.each do |f| %>
-  <%= f.email %> <br>
-<% end %>
+  <% @team.users.each do |f| %>
+    <%= f.email %> <br>
+  <% end %>
+
+</div>
