--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,268 @@
-<h3>Index page</h3>
+<div id="wrapper">
+  <div class="slider slider-home">
+    <!-- Slider Section -->
+    <div class="flexslider slider-loading falsenav">
+      <ul class="slides">
+        <li>
+          <div class="slider-textbox clearfix">
+            <div class="container">
+              <div class="row">
+                <div class="slider-bar pull-left">“It’s intensive and challenging,
+                  <br/>
+                  but we take great people and make them even better”
+                </div>
+
+              </div>
+              <div class="readMore">
+                <a href="#" class="btnBanner">read more</a>
+              </div>
+            </div>
+
+          </div>
+          <%= image_tag 'slider/sliderImg01', alt:"Slider1", class:"img-responsive" %>
+        </li>
+        <li>
+          <div class="slider-textbox clearfix">
+            <div class="container">
+              <div class="row">
+                <div class="slider-bar pull-left">“It’s intensive and challenging,
+                  <br/>
+                  but we take great people and make them even better”</div>
+
+              </div>
+              <div class="readMore">
+                <a href="#" class="btnBanner">read more</a>
+              </div>
+            </div>
+
+          </div>
+          <%= image_tag 'slider/sliderImg01', alt:"Slider1", class:"img-responsive" %>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="content">
+    <!-- Content Section -->
+    <div class="contentFirstWrap">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6 empowerContent">
+            <h1>Empowering the passionate</h1>
+            <p>
+              We exist to give you the best possible bootcamps. Our quality standards are the highest around. We won't let you go out of a bootcamp or even a day without some new conditionings to empower you. So be prepared to use your visual, auditory and
+              kinestetic learning skills to the maximum. To offer the best guidance our courses are designed to use the best neurolingistic practises.
+            </p>
+            <div class="readMoreCont">
+              <a href="#">Read More</a>
+            </div>
+          </div>
+          <div class="col-md-6 empowerImg empowerImgArrow1">
+            <%= image_tag 'empowering', alt:"Empowering the passionate" %>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="contentFirstWrap">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6 empowerImg empowerImgArrow2">
+            <%= image_tag 'tools', alt:"Empowering the passionate" %>
+
+          </div>
+          <div class="col-md-6 empowerContent">
+            <h1>Our Tools</h1>
+            <p>
+              We think people are life-long learners who love to learn and exploit (help others) what they learned. Although everyone learns, teaches and uses what they’ve learned in a different way, we are here to create an optimal process and environment for
+              that. This way we try to reform education to make it more fun and beneficial.
+            </p>
+            <div class="readMoreCont">
+              <a href="#">Read More</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="parallax parallax-one clearfix">
+      <div class="support-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="midWrap">
+                <h1 class="mission">Mission</h1>
+                <p>Give the highest quality FaceToface IT Bootcamps in the Netherlands (average review an 8)
+                </p>
+              </div>
+
+              <div class="midWrap">
+                <h1 class="mission">Partners</h1>
+                <p>
+                  <a href="http://www.wannaflex.nl">www.wannaflex.nl</a>
+                  (Quality Assurance Engineers)
+                </p>
+                <p>
+                  <a href="http://www.sentimus.nl">www.sentimus.nl</a>
+                  (Developers)
+                </p>
+              </div>
+
+              <div class="midWrap">
+                <h1 class="mission">Customers</h1>
+                <p>
+                  <a href="http://www.nekst-it.com">www.nekst-it.com</a>
+                  (Quality assurance Engineers)
+                </p>
+              </div>
+
+            </div>
+            <div class="col-md-6">
+
+              <div class="midWrap">
+                <h1 class="mission">Vision</h1>
+                <p>Reform education globally
+                </p>
+              </div>
+
+              <div class="midWrap">
+                <h1 class="mission">People(culture)</h1>
+                <p>Constant state of Pronoia, Altruistic, Passionate, Intelligent, Love learning, Hard to satisfy, Disagreeing givers
+                </p>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="container">
+        <div class="pos-center headerOtherSay">
+          <h1>What others say about us</h1>
+        </div>
+
+        <ul class="bxslider">
+          <li>
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="testimonial-post">
+                  <%= image_tag 'testimonial/testim1' %>
+                  <h2>
+                    p1</h2>
+                  <p>
+                    “ They make it simple but not easy ”</p>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="testimonial-post">
+                  <%= image_tag 'testimonial/testim2' %>
+
+                  <h2>
+                    p2
+                  </h2>
+                  <p>
+                    “ I was surprised how fast I could learn the new things, not only me but all other participants were getting passionate about learning as much as possible ”</p>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="testimonial-post">
+                  <%= image_tag 'testimonial/testim3' %>
+
+                  <h2>
+                    p3
+                  </h2>
+                  <p>
+                    “ Teachers were great. I believe they really cared about me and every other participant in the classes ”</p>
+                </div>
+              </div>
+            </div>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+<div class="trainingWrap">
+  <h1 class="train">The most people focused training method</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-sm-4">
+        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+          <div class="flipper">
+            <div class="support-box pos-center front">
+              <div class="support-box-title">
+                <i class="fa fa-users"></i>
+              </div>
+              <h4>TeamGenerator</h4>
+              <p class="margint20">We use a teamgenerator that creates random teams from the available students. This keep you engaged, lets you learn and work with others in the workshop and make you a better teamplayer</p>
+            </div>
+            <div class="support-box pos-center back">
+              <div class="support-box-title">
+                <i class="fa fa-users"></i>
+              </div>
+              <h4>TeamGenerator</h4>
+              <p class="margint20">
+                <a href="#">view more</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-4">
+        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+          <div class="flipper">
+            <div class="support-box pos-center front">
+              <div class="support-box-title">
+                <i class="fa fa-list" aria-hidden="true"></i>
+              </div>
+              <h4>Presentations</h4>
+              <p class="margint20">Theory(meta-logic) makes you recognice patterns in similar skills so it speeds up your learning, but no presentation will be longer than 20 minutes which is close to your maximum auditory attention capacity</p>
+            </div>
+            <div class="support-box pos-center back">
+              <div class="support-box-title">
+                <i class="fa fa-list" aria-hidden="true"></i>
+              </div>
+              <h4>Presentations</h4>
+              <p class="margint20">
+                <a href="#">view more</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-4">
+        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+          <div class="flipper">
+            <div class="support-box pos-center front">
+              <div class="support-box-title">
+                <i class="fa fa-trophy" aria-hidden="true"></i>
+              </div>
+              <h4>Repetition</h4>
+              <p class="margint20">You don't learn a skill by doing something 1 time, you also dont learn by doing it over and over in the same workshop, we created games and practises to keep your brain interested and get you trough the repetition</p>
+            </div>
+            <div class="support-box pos-center back">
+              <div class="support-box-title">
+                <i class="fa fa-trophy" aria-hidden="true"></i>
+              </div>
+              <h4>Repetition</h4>
+              <p class="margint20">
+                <a href="#">view more</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
