--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,23 +1,26 @@
-<h3>Leave a feedback</h3>
-<hr>
+<div class="container old-spacer">
+  <h3>Leave a feedback</h3>
+  <hr>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for @feedback do |f| %>
-      <div class="form-group">
-        <label>Select Bootcamp</label>
-        <%= f.select :bootcamp_id, Bootcamp.all.collect {|p| [ p.title, p.id ] }, { include_blank: true }, class:"form-control" %>
-      </div>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <%= form_for @feedback do |f| %>
+        <div class="form-group">
+          <label>Select Bootcamp</label>
+          <%= f.select :bootcamp_id, Bootcamp.all.collect {|p| [ p.title, p.id ] }, { include_blank: true }, class:"form-control" %>
+        </div>
 
-      <div class="form-group">
-        <label>Feedback</label>
-        <%= f.text_area :text, class:"form-control" %>
-      </div>
+        <div class="form-group">
+          <label>Feedback</label>
+          <%= f.text_area :text, class:"form-control" %>
+        </div>
 
-      <div class="form-group">
-        <%= f.submit class:"btn btn-success" %>
-      </div>
-    <% end %>
+        <div class="form-group">
+          <%= f.submit class:"btn btn-success" %>
+        </div>
+      <% end %>
 
+    </div>
   </div>
+
 </div>
