--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -1,10 +1,13 @@
-<h3>Feedbacks for <%= @bootcamp_name.title.titleize %></h3>
-<hr>
-<% @feedbacks.each do |feedback| %>
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <%= feedback.text %>
-      <hr>
+<div class="container old-spacer">
+  <h3>Feedbacks for <%= @bootcamp_name.title.titleize %></h3>
+  <hr>
+  <% @feedbacks.each do |feedback| %>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <%= feedback.text %>
+        <hr>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+
+</div>
