--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,16 +1,19 @@
-<h3>All teams</h3>
-<% if Team.any? %>
-  <%= button_to "Delete all teams", {controller: "teams", action:"delete_all"}, data:{disable_with: "Processing ..."}, class:"btn btn-danger" %>
-<% end %>
-<% @teams.each do |team| %>
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <div align="center" class="team" style="background:#eaeaea; border: 1px solid #eee;margin-bottom: 10px">
-        <% team.users.each do |user| %>
-          <%= user.email %> <br>
-        <% end %>
-        <%= link_to 'Open team', team_path(team) %>
+<div class="container old-spacer">
+  <h3>All teams</h3>
+  <% if Team.any? %>
+    <%= button_to "Delete all teams", {controller: "teams", action:"delete_all"}, data:{disable_with: "Processing ..."}, class:"btn btn-danger" %>
+  <% end %>
+  <% @teams.each do |team| %>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div align="center" class="team" style="background:#eaeaea; border: 1px solid #eee;margin-bottom: 10px">
+          <% team.users.each do |user| %>
+            <%= user.email %> <br>
+          <% end %>
+          <%= link_to 'Open team', team_path(team) %>
+        </div>
       </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+
+</div>
