--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,11 @@
     									</li>
     									<li class="parent-menu"><a href="#">Our process</a>
     										<ul>
-    											<li><a href="#">Teamgenerator</a></li>
+                          <% if current_user %>
+                            <% if current_user.role.name == 'admin' %>
+                              <li><%= link_to "Teamgenerator", new_team_path  %></li>
+                            <% end %>
+                          <% end %>
     											<li><a href="#">Code-along</a></li>
     											<li><a href="#">Practise</a></li>
     											<li><a href="#">Challenge</a></li>
@@ -77,7 +81,6 @@
                       <li class="parent-menu"><a href="#">Account</a>
     										<ul>
                             <% if current_user.role.name == 'admin' %>
-                              <li><%= link_to "Create team", new_team_path  %></li>
                               <li><%= link_to "All teams", teams_path  %></li>
                               <li><%= link_to "Feedbacks", feedbacks_path  %></li>
                               <li><%= link_to "Delete Users", delete_users_path  %></li>
