--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,26 +1,106 @@
 <div class="container old-spacer">
   <h3>Leave a feedback</h3>
+  <%= bootstrap_flash %>
   <hr>
 
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <%= form_for @feedback do |f| %>
-        <div class="form-group">
-          <label>Select Bootcamp</label>
-          <%= f.select :bootcamp_id, Bootcamp.all.collect {|p| [ p.title, p.id ] }, { include_blank: true }, class:"form-control" %>
-        </div>
-
-        <div class="form-group">
-          <label>Feedback</label>
-          <%= f.text_area :text, class:"form-control" %>
-        </div>
-
-        <div class="form-group">
-          <%= f.submit class:"btn btn-success" %>
-        </div>
-      <% end %>
-
+  <div class="form-horizontal">
+    <%= form_for @feedback do |f| %>
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Select Bootcamp</label>
+      <div class="col-sm-10">
+        <%= f.select :bootcamp_id, Bootcamp.all.collect {|p| [ p.title, p.id ] }, { include_blank: true }, class:"form-control" %>
+      </div>
     </div>
-  </div>
 
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Name</label>
+      <div class="col-sm-10">
+        <%= f.text_field :name, class:"form-control", placeholder: "John Doe" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Company and position</label>
+      <div class="col-sm-10">
+        <%= f.text_field :company_and_position, class:"form-control", placeholder: "Google, CEO" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">On a scale from 1(negative) to 10(positive) I rate the bootcamp with a</label>
+      <div class="col-sm-10">
+        <%= f.select :rate_bootcamp, [1,2,3,4,5,6,7,8,9,10], { include_blank: true }, class:"form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">I got the most value out of this part of the bootcamp</label>
+      <div class="col-sm-10">
+        <%= f.text_area :most_value, class:"form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">I got the least value out of this part of the bootcamp</label>
+      <div class="col-sm-10">
+        <%= f.text_area :least, class:"form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">After this bootcamp Im planning to</label>
+      <div class="col-sm-10">
+        <%= f.text_area :plans, class:"form-control", placeholder: "Take another bootcamp / start working ..." %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Three words to describe this bootcamp</label>
+      <div class="col-sm-10">
+        <%= f.text_area :describe_bootcamp, class:"form-control", placeholder: "Excelent bootcamp with great examples ..." %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">On a scale from 1(negative) to 10(positive) I rate the trainer with a</label>
+      <div class="col-sm-10">
+        <%= f.select :rate_trainer, [1,2,3,4,5,6,7,8,9,10], { include_blank: true }, class:"form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Suggestion/tips/compliments to the trainer</label>
+      <div class="col-sm-10">
+        <%= f.text_area :tips_to_trainer, class:"form-control", placeholder: "Great trainer, I would recommend it to others ..." %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Additional suggestion/remarks </label>
+      <div class="col-sm-10">
+        <%= f.text_area :suggestion, class:"form-control", placeholder:"It would be nice if you add ..." %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Are there any other Bootcamps you would like to have or are interested in? </label>
+      <div class="col-sm-10">
+        <%= f.text_field :other_bootcamps, class:"form-control", placeholder:"Mobile Testing and Javascript" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Can we contact you for (discounted/beta) bootcamps?</label>
+      <div class="col-sm-10">
+        <%= f.text_field :contact, class:"form-control", placeholder:"email@example.com" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%= f.submit class:"btn btn-success" %>
+      </div>
+    </div>
+    <% end %>
+  </div>
 </div>
