--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -2,12 +2,98 @@
   <h3>Feedbacks for <%= @bootcamp_name.title.titleize %></h3>
   <hr>
   <% @feedbacks.each do |feedback| %>
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <%= feedback.text %>
-        <hr>
+  <div class="row feedback-card">
+    <div class="form-horizontal">
+
+      <div class="col-md-6">
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Name</label>
+          <div class="col-sm-10">
+            <%= feedback.name %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Company and position</label>
+          <div class="col-sm-10">
+            <%= feedback.company_and_position %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">On a scale from 1(negative) to 10(positive) I rate the bootcamp with a</label>
+          <div class="col-sm-10">
+            <%= feedback.rate_bootcamp %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">I got the most value out of this part of the bootcamp</label>
+          <div class="col-sm-10">
+            <%= feedback.most_value %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">I got the least value out of this part of the bootcamp</label>
+          <div class="col-sm-10">
+            <%= feedback.least %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">After this bootcamp Im planning to</label>
+          <div class="col-sm-10">
+            <%= feedback.plans %>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Three words to describe this bootcamp</label>
+          <div class="col-sm-10">
+            <%= feedback.describe_bootcamp %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">On a scale from 1(negative) to 10(positive) I rate the trainer with a</label>
+          <div class="col-sm-10">
+            <%= feedback.rate_trainer %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Suggestion / tips / compliments to the trainer</label>
+          <div class="col-sm-10">
+            <%= feedback.tips_to_trainer %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Additional suggestion / remarks </label>
+          <div class="col-sm-10">
+            <%= feedback.suggestion %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Are there any other Bootcamps you would like to have or are interested in? </label>
+          <div class="col-sm-10">
+            <%= feedback.other_bootcamps %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Can we contact you for (discounted/beta) bootcamps?</label>
+          <div class="col-sm-10">
+            <%= feedback.contact %>
+          </div>
+        </div>
       </div>
     </div>
+  </div>
   <% end %>
-
+  <%= will_paginate @feedbacks, renderer: BootstrapPagination::Rails %>
 </div>
