--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -7,9 +7,18 @@
     color: #0e0d0d;
   }
 }
+.footer{
+  margin-top: 150px;
+}
 .feedback-card{
   background: #f8f8f8;
   padding: 10px;
   border-radius: 10px;
   margin: 10px;
+}
+.red-back{
+  padding: 10px;
+  background: rgba(167, 50, 50, 0.5);
+  color: white;
+  border-radius: 10px;
 }
