--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,6 +2,25 @@
   <%= bootstrap_devise_error_messages! %>
   <div class="panel panel-default devise-bs">
     <div class="panel-heading">
+      <h4>My profile</h4>
+    </div>
+    <div class="panel-body">
+      <div class="form-group">
+        <label>Email:</label>
+        <p><%= @user.email %></p>
+      </div>
+      <div class="form-group">
+        <label>First name:</label>
+        <p><%= @user.first_name.present? ? @user.first_name : "Not provided" %></p>
+      </div>
+      <div class="form-group">
+        <label>Last name:</label>
+        <p><%= @user.last_name.present? ? @user.last_name : "Not provided" %></p>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default devise-bs">
+    <div class="panel-heading">
       <h4><%= t('.title', resource: resource_class.model_name.human , default: "Edit #{resource_name.to_s.humanize}") %></h4>
     </div>
     <div class="panel-body">
@@ -11,12 +30,23 @@
           <%= f.email_field :email, autofocus: true, class: 'form-control' %>
         </div>
         <div class="form-group">
-          <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', default: "leave blank if you don't want to change it") %>)</i>
-          <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name, class: 'form-control' %>
         </div>
         <div class="form-group">
-          <%= f.label :password_confirmation %>
-          <%= f.password_field :password_confirmation, class: 'form-control'  %>
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name, class: 'form-control' %>
+        </div>
+        <div class="red-back">
+          <span>Edit this fields only if you want to change your password!</span>
+          <div class="form-group">
+            <label>New password</label> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', default: "leave blank if you don't want to change it") %>)</i>
+            <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, class: 'form-control'  %>
+          </div>
         </div>
         <div class="form-group">
           <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes', default: 'we need your current password to confirm your changes') %>)</i>
