--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -18,7 +18,13 @@
 }
 .red-back{
   padding: 10px;
-  background: rgba(167, 50, 50, 0.5);
-  color: white;
+  background: rgba(#644b9c, 0.2);
   border-radius: 10px;
+  margin: 5px;
+}
+.green-back{
+  padding: 10px;
+  background: rgba(#4c9c4b, 0.2);
+  border-radius: 10px;
+  margin: 5px;
 }
