remove obsolete code and prepare for the new style

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,7 +19,7 @@
             </div>
 
           </div>
-          <%= image_tag 'slider/sliderImg01', alt:"Slider1", class:"img-responsive" %>
+          <%= image_tag 'slider/sliderImg01.jpg', alt:"Slider1", class:"img-responsive" %>
         </li>
         <li>
           <div class="slider-textbox clearfix">
@@ -36,7 +36,7 @@
             </div>
 
           </div>
-          <%= image_tag 'slider/sliderImg01', alt:"Slider1", class:"img-responsive" %>
+          <%= image_tag 'slider/sliderImg01.jpg', alt:"Slider1", class:"img-responsive" %>
         </li>
       </ul>
     </div>
@@ -59,7 +59,7 @@
             </div>
           </div>
           <div class="col-md-6 empowerImg empowerImgArrow1">
-            <%= image_tag 'empowering', alt:"Empowering the passionate" %>
+            <%= image_tag 'empowering.jpg', alt:"Empowering the passionate" %>
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6 empowerImg empowerImgArrow2">
-            <%= image_tag 'tools', alt:"Empowering the passionate" %>
+            <%= image_tag 'tools.jpg', alt:"Empowering the passionate" %>
 
           </div>
           <div class="col-md-6 empowerContent">
@@ -153,7 +153,7 @@
             <div class="row">
               <div class="col-sm-4">
                 <div class="testimonial-post">
-                  <%= image_tag 'testimonial/testim1' %>
+                  <%= image_tag 'testimonial/testim1.jpg' %>
                   <h2>
                     p1</h2>
                   <p>
@@ -162,7 +162,7 @@
               </div>
               <div class="col-sm-4">
                 <div class="testimonial-post">
-                  <%= image_tag 'testimonial/testim2' %>
+                  <%= image_tag 'testimonial/testim2.jpg' %>
 
                   <h2>
                     p2
@@ -173,7 +173,7 @@
               </div>
               <div class="col-sm-4">
                 <div class="testimonial-post">
-                  <%= image_tag 'testimonial/testim3' %>
+                  <%= image_tag 'testimonial/testim3.jpg' %>
 
                   <h2>
                     p3
