--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,66 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+$main-color: #7302A1;
+
+nav a {
+    display: block;
+    font-size: 1.3rem;
+    font-weight: 400;
+    letter-spacing: 0.01rem;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+a{
+  color: #656565;
+  transition: color 0.2s ease-in-out;
+  -webkit-transition: color 0.2s ease-in-out;
+}
+a:hover{
+  color: $main-color;
+}
+#cover-jumbo{
+  margin-top: 50px;
+  background: #ffffff;
+  .main-text{
+    font-family: 'Lusitana', serif;
+    font-size: 40px;
+    line-height: 56px;
+    color: #111111;
+  }
+  .secondary-text{
+    font-size: 19px;
+    line-height: 28px;
+    color: #111111;
+    margin: 20px 0px 30px 0px;
+    font-weight: 600;
+  }
+  .paragraph{
+    font-size: 16px;
+    line-height: 28px;
+    color: #656565;
+  }
+}
+#cover-stripe{
+  height: 300px;
+  background: $main-color;
+  color: #fff;
+  .content{
+    padding-top: 100px;
+  }
+  p{
+    font-weight: 600;
+  }
+  a.btn {
+    box-sizing: border-box;
+    text-decoration: none;
+    overflow: hidden;
+    color: #fff;
+    font-weight: 600;
+    background: rgba(0,0,0,0.3);
+    transition: color 0.7s cubic-bezier(0.215, 0.61, 0.355, 1),background 0.7s cubic-bezier(0.215, 0.61, 0.355, 1),border 0.7s cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  a.btn:hover{
+    background: rgba(0,0,0,0.5);
+  }
+}
